--- a/test.html
+++ b/test.html
@@ -4,6 +4,21 @@
 	</head>
 	<body bgcolor="FFFFFFFF">
 		<canvas id="myCanvas" width="512" height="512"></canvas>
-		<script src="main.js"></script>
+		<script src="Util.js"></script>
+		<script src="Consts.js"></script>
+		
+		<script src="Pool.js"></script>
+		<script src="SchemaRegistry.js"></script>
+		
+		<script src="GameState.js"></script>
+		
+		<script src="FakeDispatcher.js"></script>
+		<script src="SharedState.js"></script>
+		<script src="Server.js"></script>
+		
+		<script src="Renderer.js"></script>
+		<script src="Client.js"></script>
+		
+		<script src="Main.js"></script>
 	</body>
 </html>
