--- a/crap/test.html
+++ b/crap/test.html
@@ -4,6 +4,6 @@
 	</head>
 	<body bgcolor="FFFFFFFF">
 		<canvas id="myCanvas" width="512" height="512"></canvas>
-		<script src="main.js"></script>
+		<script src="ex1.js"></script>
 	</body>
 </html>
