--- a/game/game.html
+++ b/game/game.html
@@ -4,6 +4,9 @@
 	</head>
 	<body bgcolor="FFFFFFFF">
 		<canvas id="myCanvas" width="512" height="512"></canvas>
+		<script src="Wad.js"></script>
+		<script src="Matrix4.js"></script>
+		<script src="Mesh.js"></script>
 		<script src="game.js"></script>
 	</body>
 </html>
