fixed height collision bug. speed counter

--- a/game/game.html
+++ b/game/game.html
@@ -4,6 +4,7 @@
 	</head>
 	<body bgcolor="FFFFFFFF">
 		<b id="fpsCounter">FPS: 0</b><br/>
+		<b id="speedCounter">SPEED: 0</b><br/>
 		<canvas id="myCanvas" width="800" height="600"></canvas>
 		<script src="Wad.js"></script>
 		<script src="Matrix4.js"></script>
