--- a/wad2d/wad2d.html
+++ b/wad2d/wad2d.html
@@ -4,8 +4,8 @@
 	</head>
 	<body bgcolor="FFFFFFFF">
 		<b id="fpsCounter">FPS: 0</b><br/>
-		<b id="speedCounter">SPEED: 0</b><br/>
 		<canvas id="myCanvas" width="800" height="600"></canvas>
-		<script src="lib/require.js" data-main="Main"></script>
+		<script src="Wad.js"></script>
+		<script src="wad2d.js"></script>
 	</body>
 </html>
