--- a/game/game.html
+++ b/game/game.html
@@ -1,8 +1,23 @@
 <html>
 	<head>
-		<style>#myCanvas { background-color: rgba(158, 167, 184, 0.2); }</style>
+		<!-- <style>#myCanvas { background-color: rgba(158, 167, 184, 0.2); width: 1600; height: 1200; image-rendering: pixelated }</style> -->
+		<style>
+		body{color:white; background-color: rgba(0, 0, 0, 1); }
+		#myCanvas {
+			background-color: rgba(158, 167, 184, 0.2);
+			margin: auto;
+			display: block;
+			width: 800px;
+			height: 600px;
+			position: absolute;
+			    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+		}
+		</style>
 	</head>
-	<body bgcolor="FFFFFFFF">
+	<body>
 		<b id="fpsCounter">FPS: 0</b><br/>
 		<b id="speedCounter">SPEED: 0</b><br/>
 		<canvas id="myCanvas" width="800" height="600"></canvas>
