--- a/game/game.html
+++ b/game/game.html
@@ -7,20 +7,21 @@
 			background-color: rgba(158, 167, 184, 0.2);
 			margin: auto;
 			display: block;
-			width: 800px;
-			height: 600px;
+			width: 1024;
+			height: 768;
 			position: absolute;
-			    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			image-rendering: pixelated;
 		}
 		</style>
 	</head>
 	<body>
 		<b id="fpsCounter">FPS: 0</b><br/>
 		<b id="speedCounter">SPEED: 0</b><br/>
-		<canvas id="myCanvas" width="800" height="600"></canvas>
+		<canvas id="myCanvas" width="1024" height="768"></canvas>
 		<script src="lib/require.js" data-main="Main"></script>
 	</body>
 </html>
