--- a/game/wadray.html
+++ b/game/wadray.html
@@ -5,6 +5,11 @@
 	<body bgcolor="FFFFFFFF">
 		<b id="fpsCounter">FPS: 0</b><br/>
 		<canvas id="myCanvas" width="800" height="600"></canvas>
+		<script>
+			function define(deps, f) {
+				
+			}
+		</script>
 		<script src="wadray.js"></script>
 	</body>
 </html>
